--- a/chapter2_solution.ipynb
+++ b/chapter2_solution.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [
     {
@@ -75,6 +75,161 @@
    "metadata": {},
    "source": [
     "#### 2.6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 193,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bob sends to Alice value B = 805\n",
+      "Their secret shared value is K = 397\n",
+      "Secret key of Alice is a = 587\n"
+     ]
+    }
+   ],
+   "source": [
+    "g = 2\n",
+    "p = 1373\n",
+    "A = 974\n",
+    "\n",
+    "b = 871\n",
+    "B = pow(g, b, p)\n",
+    "print(\"Bob sends to Alice value B =\", B)\n",
+    "print(\"Their secret shared value is K =\", pow(A, b, p))\n",
+    "\n",
+    "for x in range(0, p):\n",
+    "    if pow(g, x, p) == A:\n",
+    "        print(\"Secret key of Alice is a =\", x)\n",
+    "        break"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2.8"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 194,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a. Public key of Alice is A = 177\n",
+      "b. Alice sends to Bob (c1, c2) = (719, 623)\n",
+      "c. Decrypt the message m = 332\n",
+      "d. Secret key of Bob is b = 219\n",
+      "   Message m = 365\n"
+     ]
+    }
+   ],
+   "source": [
+    "p = 1373\n",
+    "g = 2\n",
+    "\n",
+    "a = 947\n",
+    "public_key = pow(g, a, p)\n",
+    "print(\"a. Public key of Alice is A =\", public_key)\n",
+    "\n",
+    "b = 716\n",
+    "B = 469\n",
+    "m = 583\n",
+    "k = 877\n",
+    "print(\"b. Alice sends to Bob (c1, c2) = (\" + str(pow(g, k, p)) + \", \" + str((m * pow(B, k, p)) % p) + \")\")\n",
+    "\n",
+    "a = 299\n",
+    "A = 34\n",
+    "c1 = 661\n",
+    "c2 = 1325\n",
+    "tmp = pow(c1, a, p)\n",
+    "msg = (c2 * pow(tmp, -1, p)) % p\n",
+    "print(\"c. Decrypt the message m =\", msg)\n",
+    "\n",
+    "B = 893\n",
+    "c1 = 693\n",
+    "c2 = 793\n",
+    "for x in range(0, p):\n",
+    "    if pow(g, x, p) == B:\n",
+    "        b = x\n",
+    "        print(\"d. Secret key of Bob is b =\", b)\n",
+    "        break\n",
+    "\n",
+    "tmp = pow(c1, b, p)\n",
+    "msg = (c2 * pow(tmp, -1, p)) % p\n",
+    "print(\"   Message m =\", msg)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2.9"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Có $p$, $g$ và $pk=g^a$ $(mod$ $p)$ công khai trên kênh truyền với $a$ là khoá bí mật\n",
+    "\n",
+    "Nhắc lại về ElGamal, $(c1, c2)=(g^r$ $\\%$ $p, m*pk^r$ $\\%$ $p)=(g^r, m*g^{ar})$\n",
+    "\n",
+    "Do ta có oracle để giải được bài toán **DHP** $\\rightarrow$ Từ $g^a$ (khoá công khai) và $g^r$ ($c1$ được gửi trên kênh truyền) ta sẽ sinh ra được $g^{ar}$ $(mod$ $p) \\rightarrow (g^{ar})^{-1}$ $(mod$ $p)$\n",
+    "\n",
+    "Vậy lấy $c2$ nhân với giá trị $(g^{ar})^{-1}$ ta vừa tính được thì sẽ ra được $m$"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2.12"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(a) Nếu $g \\in G[d] \\rightarrow g^d=e$\n",
+    "\n",
+    "Chứng minh $e^{-1}=e$\n",
+    "\n",
+    "- $e$ là phần tử đơn vị thoả $a*e=e*a=a$\n",
+    "- $a*e=a\\rightarrow a=a*e^{-1}$\n",
+    "- $e*a=a\\rightarrow a = e^{-1}*a \\Rightarrow a = a*e^{-1}=e^{-1}*a \\Rightarrow e$ cũng là phần tử đơn vị\n",
+    "- Mà phần tử đơn vị của 1 nhóm là duy nhất $\\rightarrow e = e^{-1}$\n",
+    "\n",
+    "$g^d=e\\rightarrow (g^d)^{-1}=e^{-1}=e \\rightarrow (g^{-1})^d=e \\rightarrow g^{-1} \\in G[d]$\n",
+    "\n",
+    "(b) Nếu $g_1$ và $g_2 \\in G[d]$ thì $g_1^d=e$ và $g_2^d=e$ $\\rightarrow g_1^d*g_2^d=e*e=e$ $\\rightarrow g_1*g_1*...*g_1*g_2*...*g_2=e$ $\\rightarrow (g_1*g_2)^d=e \\rightarrow g_1*g_2 \\in G[d]$\n",
+    "\n",
+    "(c) $G[d]$ có phần tử đơn vị $e$ khi $g^d=e^d=e$\n",
+    "\n",
+    "$G[d]$ có phần tử nghịch đảo như đã chứng minh ở câu a\n",
+    "\n",
+    "$G[d]$ có tính kết hợp, $(g_1*g_2)^d*g_3^d=g_1^d*(g_2*g_3)^d=(g_1*g_2*g_3)^d$ như đã chứng minh ở câu b\n",
+    "\n",
+    "$\\Rightarrow G[d]$ là 1 nhóm\n",
+    "\n",
+    "(d) Xét nhóm ma trận $G = GL_n(\\mathbb{R})$ thì $G$ không phải là nhóm giao hoán\n",
+    "\n",
+    "Xét $(g_1g_2)^dg_3^d=g_1^d(g_2g_3)^d \\rightarrow (g_1*g_2)^d*g_3^d*(g_2g_3)^{-d}=g_1^d \\rightarrow (g_1*g_2)^d*g_3^d*g_3^{-d}*g_2^{-d}=g_1^d \\rightarrow (g_1*g_2)^d=g_1^d*g_2^d$\n",
+    "\n",
+    "Do $G$ không mang tính giao hoán nên phương trình cuối cùng ở trên không xảy ra $\\rightarrow G[d]$ không là 1 nhóm"
    ]
   }
  ],
