--- a/chapter2_solution.ipynb
+++ b/chapter2_solution.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -230,6 +230,48 @@
     "Xét $(g_1g_2)^dg_3^d=g_1^d(g_2g_3)^d \\rightarrow (g_1*g_2)^d*g_3^d*(g_2g_3)^{-d}=g_1^d \\rightarrow (g_1*g_2)^d*g_3^d*g_3^{-d}*g_2^{-d}=g_1^d \\rightarrow (g_1*g_2)^d=g_1^d*g_2^d$\n",
     "\n",
     "Do $G$ không mang tính giao hoán nên phương trình cuối cùng ở trên không xảy ra $\\rightarrow G[d]$ không là 1 nhóm"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2.13"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(a) $\\phi(g_1*g_2)=\\phi(g_1)*\\phi(g_2)$ với $g_1, g_2 \\in G$\n",
+    "\n",
+    "Đặt $g_2=e_G$ ta có $\\phi(g_1*e_G)=\\phi(g_1)=\\phi(g_1)*\\phi(e_G)$\n",
+    "\n",
+    "Do $\\phi(g_1)$ và $\\phi(e_G) \\in H \\rightarrow$ chia $\\phi(g_1)$ cho 2 vế ta được $e_H=\\phi(e_G)$\n",
+    "\n",
+    "Có $\\phi(g*g^{-1})=\\phi(g)*\\phi(g^{-1})=\\phi(e_G)=e_H \\rightarrow \\phi(g^{-1})=\\phi(g)^{-1}$ với $g \\in G$\n",
+    "\n",
+    "(b) Gọi $x_1$ và $x_2 \\in G$\n",
+    "\n",
+    "Xét $\\phi(x_1*x_2)=(x_1*x_2)^2 = x_1*x_2*x_1*x_2=x_1*x_1*x_2*x_2=x_1^2*x_2^2=\\phi(x_1)*\\phi(x_2)$ (do $G$ có tính giao hoán) $\\rightarrow$ $G$ đồng cấu\n",
+    "\n",
+    "Xét nhóm không mang tính giao hoán là $G = GL_n(\\mathbb{R})$ $\\rightarrow$ với $A, B \\in G$ ta có $A*B\\neq B*A$\n",
+    "\n",
+    "Xét $\\phi(x_1*x_2)=(x_1*x_2)^2 = x_1*x_2*x_1*x_2 \\neq x_1*x_1*x_2*x_2$\n",
+    "\n",
+    "$\\rightarrow \\phi(x_1*x_2) \\neq \\phi(x_1)*\\phi(x_2) \\rightarrow$ không phải là đồng cấu\n",
+    "\n",
+    "(c) Gọi $x_1$ và $x_2 \\in G$\n",
+    "\n",
+    "Xét $\\phi(x_1*x_2)=(x_1*x_2)^{-1} = x_2^{-1}*x_1^{-1}=x_1^{-1}*x_2^{-1}=\\phi(x_1)*\\phi(x_2)$ (do $G$ có tính giao hoán) $\\rightarrow$ $G$ đồng cấu\n",
+    "\n",
+    "Xét nhóm không mang tính giao hoán là $G = GL_n(\\mathbb{R})$ $\\rightarrow$ với $A, B \\in G$ ta có $A*B\\neq B*A$\n",
+    "\n",
+    "Xét $\\phi(x_1*x_2)=(x_1*x_2)^{-1} = x_2^{-1}*x_1^{-1} \\neq x_1^{-1}*x_2^{-1}$\n",
+    "\n",
+    "$\\rightarrow \\phi(x_1*x_2) \\neq \\phi(x_1)*\\phi(x_2) \\rightarrow$ không phải là đồng cấu"
    ]
   }
  ],
