--- a/chapter2_solution.ipynb
+++ b/chapter2_solution.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 438,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 439,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 440,
    "metadata": {},
    "outputs": [
     {
@@ -272,6 +272,131 @@
     "Xét $\\phi(x_1*x_2)=(x_1*x_2)^{-1} = x_2^{-1}*x_1^{-1} \\neq x_1^{-1}*x_2^{-1}$\n",
     "\n",
     "$\\rightarrow \\phi(x_1*x_2) \\neq \\phi(x_1)*\\phi(x_2) \\rightarrow$ không phải là đồng cấu"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2.15"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(a) $GL_2(\\mathbb{F}_p)=\\{\\begin{pmatrix} a & b \\\\ c & d \\\\ \\end{pmatrix} : a,b,c,d \\in \\mathbb{F}_p; \\exists \\begin{pmatrix} a & b \\\\ c & d \\\\ \\end{pmatrix}^{-1} \\in GL_2(\\mathbb{F}_p)\\}$\n",
+    "- Có tính đóng: với $A, B \\in GL_2(\\mathbb{F}_p)$ ta có $det(A*B)=det(A)*det(B)\\neq 0$ $(mod$ $p)$ do $det(A) \\neq 0$ và $det(B) \\neq 0$ $(mod$ $p)$\n",
+    "- Phần tử đơn vị là $\\begin{pmatrix} 1 & 0 \\\\ 0 & 1 \\\\ \\end{pmatrix} \\in GL_2(\\mathbb{F}_p)$ do định thức là 1 và $0,1\\in \\mathbb{F}_p$\n",
+    "- Tồn tại phần tử nghịch đảo như định nghĩa của $GL_2(\\mathbb{F}_p)$\n",
+    "- Có tính kết hợp: $(A * B)*C=A*(B*C)$ do định nghĩa của ma trận\n",
+    "\n",
+    "$\\rightarrow GL_2(\\mathbb{F}_p)$ là 1 nhóm\n",
+    "\n",
+    "(b) Với $A=\\begin{pmatrix} 1 & 0 \\\\ 1 & 1 \\\\ \\end{pmatrix}$ và $B=\\begin{pmatrix} 1 & 1 \\\\ 0 & 1 \\\\ \\end{pmatrix}$ ta có\n",
+    "\n",
+    "$A*B=\\begin{pmatrix} 1 & 1 \\\\ 1 & 2 \\% p \\\\ \\end{pmatrix}$ và $B*A=\\begin{pmatrix} 2 \\% p & 1 \\\\ 1 & 1 \\\\ \\end{pmatrix}$\n",
+    "\n",
+    "với $p$ là số nguyên tố $\\rightarrow p \\ge 2 \\rightarrow 2\\%p=0$ với $p=2$ và $2\\%p=2$ với $p > 2$\n",
+    "\n",
+    "mà để $A*B=B*A$ thì tồn tại $p$ sao cho $2\\%p=1 \\rightarrow A*B\\neq B*A \\rightarrow GL_2(\\mathbb{F}_p)$ không là nhóm giao hoán\n",
+    "\n",
+    "(c) $\\mathbb{F}_2=\\{0,1\\}\\rightarrow GL_2(\\mathbb{F}_2)=\\{\\begin{pmatrix} 0 & 1 \\\\ 1 & 0 \\\\ \\end{pmatrix};\\begin{pmatrix} 0 & 1 \\\\ 1 & 1 \\\\ \\end{pmatrix};\\begin{pmatrix} 1 & 0 \\\\ 0 & 1 \\\\ \\end{pmatrix};\\begin{pmatrix} 1 & 0 \\\\ 1 & 1 \\\\ \\end{pmatrix};\\begin{pmatrix} 1 & 1 \\\\ 0 & 1 \\\\ \\end{pmatrix};\\begin{pmatrix} 1 & 1 \\\\ 1 & 0 \\\\ \\end{pmatrix}\\}$\n",
+    "\n",
+    "(d) Xét ma trận $A=\\begin{pmatrix} a & b \\\\ c & d \\\\ \\end{pmatrix}$, với trường hợp tồn tại 1 phần tử bằng 0 ta có $4*(p-1)^3+2*(p-1)^2$ ma trận thuộc $GL_2(\\mathbb{F}_p)$\n",
+    "- $a=0; b,c,d\\neq 0$ (và tương tự cho $b=0,c=0,d=0$) ta có $4*(p-1)^3$ cách chọn [do với trường hợp $a=0; b,c,d\\neq 0$ thì $det(A)=b*c\\neq 0$ $(mod$ $p)$ $\\forall b,c,d \\in \\mathbb{F}_p \\rightarrow$ có $(p-1)^3$ cách chọn]\n",
+    "\n",
+    "- $a=0,d=0,b\\neq 0, c \\neq 0$ luôn cho định thức khác 0 có $(p-1)^2$ và tương tự cho trường hợp $a \\neq 0,d\\neq 0,b= 0, c = 0 \\rightarrow$ tổng cộng có $2*(p-1)^2$ cách chọn\n",
+    "\n",
+    "Nếu không có phần tử khác 0 ta chọn $a,b,c$ khác 0 $\\rightarrow$ có $(p-1)^3$ cách chọn, đồng thời ta phải chọn $d$ sao cho giá trị $d$ thoả $ad-bc\\neq 0$. Do chỉ tồn tại 1 giá trị $d$ thoả $ad=bc$ nên ta có $p-2$ cách chọn $d$\n",
+    "\n",
+    "Vậy có tổng cộng $4*(p-1)^3+2*(p-1)^2+(p-1)^3*(p-2)=(p-1)^2*p*(p+1)$ phần tử trong nhóm $GL_2(\\mathbb{F}_p)$"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2.16"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Sử dụng định lý được nêu trong sách, nếu $\\lim\\limits_{x \\to \\infty} \\displaystyle\\frac{f(x)}{g(x)}$ tồn tại và hữu hạn thì $f(x)=O(g(x))$\n",
+    "\n",
+    "(a) $x^2+\\sqrt{x}=O(x^2)$\n",
+    "\n",
+    "$\\lim\\limits_{x \\to \\infty} \\displaystyle\\frac{x^2+\\sqrt{x}}{x^2} = 1$ hữu hạn $\\rightarrow x^2+\\sqrt{x}=O(x^2)$\n",
+    "\n",
+    "(b) $5+6x^2-37x^5=O(x^5)$\n",
+    "\n",
+    "$\\lim\\limits_{x \\to \\infty} \\displaystyle\\frac{5+6x^2-37x^5}{x^5} = -37$ hữu hạn $\\rightarrow 5+6x^2-37x^5=O(x^5)$\n",
+    "\n",
+    "(c) $k^{300}=O(2^k)$\n",
+    "\n",
+    "Sử dụng định lý **L'Hospital** ta có\n",
+    "\n",
+    "$\\lim\\limits_{k \\to \\infty} \\displaystyle\\frac{k^{300}}{2^k} = \\lim\\limits_{k \\to \\infty} \\displaystyle\\frac{300*k^{299}}{2^k*ln(2)} = \\lim\\limits_{k \\to \\infty} \\displaystyle\\frac{300*299*k^{298}}{2^k*ln(2)^2}=...=\\lim\\limits_{k \\to \\infty} \\displaystyle\\frac{300*299*...*2*1}{2^k*ln(2)^{300}}=\\displaystyle\\frac{\\prod_{i=1}^{300}(i)}{ln(2)^{300}}*\\lim\\limits_{k \\to \\infty} \\displaystyle\\frac{1}{2^k}=0$ có giới hạn hữu hạn  \n",
+    "\n",
+    "$\\rightarrow k^{300}=O(2^k)$\n",
+    "\n",
+    "(d) $(ln(k))^{375}=O(k^{0.001})$\n",
+    "\n",
+    "$\\lim\\limits_{k \\to \\infty} \\displaystyle\\frac{(ln(k))^{375}}{k^{0.001}} = \\lim\\limits_{k \\to \\infty} \\displaystyle\\frac{375*(ln(k))^{374}*\\frac{1}{k}}{0.001*k^{0.001}*\\frac{1}{k}} = \\lim\\limits_{k \\to \\infty} \\displaystyle\\frac{375*(ln(k))^{374}}{0.001*k^{0.001}}=\\lim\\limits_{k \\to \\infty} \\displaystyle\\frac{375*374*(ln(k))^{373}*\\frac{1}{k}}{0.001*k^{0.001}*\\frac{1}{k}}=\\lim\\limits_{k \\to \\infty} \\displaystyle\\frac{375*374*(ln(k))^{373}}{0.001*k^{0.001}}=...=\\lim\\limits_{k \\to \\infty} \\displaystyle\\frac{375*374*373*...*2*1}{0.001*k^{0.001}}=0$ có giới hạn hữu hạn\n",
+    "\n",
+    "$\\rightarrow (ln(k))^{375}=O(k^{0.001})$\n",
+    "\n",
+    "(e) $k^2*2^k=O(e^{2k})$\n",
+    "\n",
+    "$\\lim\\limits_{k \\to \\infty} \\displaystyle\\frac{k^2*2^k}{e^{2k}} = \\lim\\limits_{k \\to \\infty} \\displaystyle\\frac{k^2}{\\bigg(\\displaystyle\\frac{e^2}{2}\\bigg)^k}= \\lim\\limits_{k \\to \\infty} \\displaystyle\\frac{2k}{\\bigg(\\displaystyle\\frac{e^2}{2}\\bigg)^k*ln\\bigg(\\displaystyle\\frac{e^2}{2}\\bigg)}= \\lim\\limits_{k \\to \\infty} \\displaystyle\\frac{2}{\\bigg(\\displaystyle\\frac{e^2}{2}\\bigg)^k*ln\\bigg(\\displaystyle\\frac{e^2}{2}\\bigg)*ln\\bigg(\\displaystyle\\frac{e^2}{2}\\bigg)}=0$ có giới hạn hữu hạn\n",
+    "\n",
+    "$\\rightarrow k^2*2^k=O(e^{2k})$\n",
+    "\n",
+    "(f) $n^{10}*2^n=O(e^n)$\n",
+    "\n",
+    "$\\lim\\limits_{n \\to \\infty} \\displaystyle\\frac{n^{10}*2^n}{e^n} = \\lim\\limits_{n \\to \\infty} \\displaystyle\\frac{n^{10}}{\\bigg(\\displaystyle\\frac{e}{2}\\bigg)^n}= \\lim\\limits_{n \\to \\infty} \\displaystyle\\frac{10*n^9}{\\bigg(\\displaystyle\\frac{e}{2}\\bigg)^n*ln\\bigg(\\displaystyle\\frac{e}{2}\\bigg)}=...= \\lim\\limits_{n \\to \\infty} \\displaystyle\\frac{10*9*...*2*1}{\\bigg(\\displaystyle\\frac{e}{2}\\bigg)^n*\\Bigg(ln\\bigg(\\displaystyle\\frac{e}{2}\\bigg)\\Bigg)^{10}}=0$ có giới hạn hữu hạn\n",
+    "\n",
+    "$\\rightarrow n^{10}*2^n=O(e^n)$"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2.17"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 441,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "\n",
+    "def shanks_algorithm(g, h, p):\n",
+    "    for N in range(1, p):\n",
+    "        if pow(g, N, p) == 1: break\n",
+    "    \n",
+    "    n = 1 + int(math.sqrt(N))\n",
+    "    l1 = []\n",
+    "    for i in range(0, n + 1):\n",
+    "        "
    ]
   }
  ],
