--- a/chapter2_solution.ipynb
+++ b/chapter2_solution.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 438,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 439,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 440,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -375,14 +375,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 441,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3\n"
+      "a. x = 37\n",
+      "b. x = 59\n",
+      "c. x = 319\n"
      ]
     }
    ],
@@ -395,8 +397,41 @@
     "    \n",
     "    n = 1 + int(math.sqrt(N))\n",
     "    l1 = []\n",
-    "    for i in range(0, n + 1):\n",
-    "        "
+    "    for i in range(n + 1):\n",
+    "        l1.append([i, pow(g, i, p)])\n",
+    "\n",
+    "    temp = pow(g, -n, p)\n",
+    "    l2 = []\n",
+    "    for i in range(n + 1):\n",
+    "        l2.append([i, (h * pow(temp, i, p)) % p])\n",
+    "\n",
+    "    l1.sort(key = lambda x: x[1])\n",
+    "    l2.sort(key = lambda x: x[1])\n",
+    "\n",
+    "    ans = -1\n",
+    "    for i in range(len(l2)): # -> l2[i]\n",
+    "        left = 0\n",
+    "        right = len(l1) - 1\n",
+    "        while left <= right:\n",
+    "            mid = (left + right) // 2\n",
+    "            if l2[i][1] == l1[mid][1]:\n",
+    "                ans = [l1[mid][0], l2[i][0]]\n",
+    "                break\n",
+    "            elif l2[i][1] > l1[mid][1]:\n",
+    "                left = mid + 1\n",
+    "            else: right = mid - 1\n",
+    "        if ans != -1: break\n",
+    "\n",
+    "    return ans[0] + n * ans[1]\n",
+    "\n",
+    "res_a = shanks_algorithm(11, 21, 71)\n",
+    "print('a. x =', res_a)\n",
+    "\n",
+    "res_b = shanks_algorithm(156, 116, 593)\n",
+    "print('b. x =', res_b)\n",
+    "\n",
+    "res_c = shanks_algorithm(650, 2213, 3571)\n",
+    "print('c. x =', res_c)"
    ]
   }
  ],
