--- a/chapter2_solution.ipynb
+++ b/chapter2_solution.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -433,6 +433,95 @@
     "res_c = shanks_algorithm(650, 2213, 3571)\n",
     "print('c. x =', res_c)"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2.18"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a. x = 31\n",
+      "b. x = 27209\n",
+      "c. x = -1\n",
+      "d. x = 986\n",
+      "e. x = 11733\n"
+     ]
+    }
+   ],
+   "source": [
+    "def chinese_remainder_theorem(inp):\n",
+    "    tmp_gcd = 0\n",
+    "    N = 1\n",
+    "    x = 0\n",
+    "    for i in range(len(inp)):\n",
+    "        tmp_gcd = math.gcd(tmp_gcd, inp[i][1])\n",
+    "        N *= inp[i][1]\n",
+    "    if tmp_gcd != 1: return -1\n",
+    "\n",
+    "    n = []\n",
+    "    for i in range(len(inp)):\n",
+    "        n.append(N // inp[i][1])\n",
+    "\n",
+    "    m = []\n",
+    "    for i in range(len(inp)):\n",
+    "        m.append(pow(n[i], -1, inp[i][1]))\n",
+    "\n",
+    "    for i in range(len(inp)):\n",
+    "        x += inp[i][0] * n[i] * m[i]\n",
+    "\n",
+    "    return x % N\n",
+    "\n",
+    "print('a. x =', chinese_remainder_theorem([[3, 7], [4, 9]]))\n",
+    "print('b. x =', chinese_remainder_theorem([[137, 423], [87, 191]]))\n",
+    "print('c. x =', chinese_remainder_theorem([[133, 451], [237, 697]])) # -1 -> No solution\n",
+    "print('d. x =', chinese_remainder_theorem([[5, 9], [6, 10], [7, 11]]))\n",
+    "print('e. x =', chinese_remainder_theorem([[37, 43], [22, 49], [18, 71]]))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2.20"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$x=a+cm \\rightarrow x=a$ $(mod$ $m)$\n",
+    "\n",
+    "Do $c=(b-a)*m^{-1}$ $(mod$ $n) \\rightarrow cm=b-a$ $(mod$ $n) \\rightarrow cm = b - a + k*n$ với $k \\in \\mathbb{Z}$\n",
+    "\n",
+    "$x=a+cm=a+b - a + k*n=b+k*n \\rightarrow x=b$ $(mod$ $n)$\n",
+    "\n",
+    "$x \\equiv a$ $(mod$ $m)$ $\\Rightarrow x = m*k_1+a$\n",
+    "\n",
+    "$m*k_1+a \\equiv b$ $(mod$ $n)$ $\\Rightarrow k_1 \\equiv (b-a)*m^{-1} \\equiv c$ $(mod$ $n) \\Rightarrow k_1 = k*n+c$\n",
+    "\n",
+    "$\\Rightarrow x=m*(k*n+c)+a=k*m*n+m*c+a$ $\\forall k \\in \\mathbb{Z}$"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2.23"
+   ]
   }
  ],
  "metadata": {
@@ -451,7 +540,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.7 (tags/v3.9.7:1016ef3, Aug 30 2021, 20:19:38) [MSC v.1929 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
