--- a/chapter2_solution.ipynb
+++ b/chapter2_solution.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [
     {
@@ -522,6 +522,74 @@
    "source": [
     "#### 2.23"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 199,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(a). Square root of 340 modulo 437: [215, 291, 146, 222]\n",
+      "(b). Square root of 253 modulo 3143: [1387, 2654, 489, 1756]\n",
+      "(c). Square root of 2833 modulo 4189: [1712, 3187, 1002, 2477]\n",
+      "(d). Square root of 813 modulo 868: [785, 393, 41, 517, 351, 827, 475, 83]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def find_square_root(b, n): # b = a^2 (mod n)\n",
+    "    factor = []\n",
+    "    square = []\n",
+    "    res = []\n",
+    "    temp = n\n",
+    "    p = 2\n",
+    "    while temp != 1:\n",
+    "        tmp1 = 1\n",
+    "        while temp % p == 0:\n",
+    "            tmp1 *= p\n",
+    "            temp //= p\n",
+    "        if tmp1 != 1: factor.append(tmp1)\n",
+    "        p += 1\n",
+    "    for x in factor:\n",
+    "        val = b % x\n",
+    "        if x % 4 == 3: square.append(pow(val, (x + 1) // 4, x))\n",
+    "        else:\n",
+    "            for i in range(x):\n",
+    "                if pow(i, 2, x) == val:\n",
+    "                    square.append(i)\n",
+    "                    break\n",
+    "    \n",
+    "    for i in range(2 ** len(square)):\n",
+    "        sign = []\n",
+    "        while i:\n",
+    "            sign.append(i % 2)\n",
+    "            i //= 2\n",
+    "        while len(sign) != len(square):\n",
+    "            sign.append(0)\n",
+    "        sign.reverse()\n",
+    "        inp = []\n",
+    "        for k in range(len(square)):\n",
+    "            inp.append([pow(-1, sign[k]) * square[k], factor[k]])\n",
+    "        res.append(int(chinese_remainder_theorem(inp)))\n",
+    "\n",
+    "    return res\n",
+    "\n",
+    "print(\"(a). Square root of 340 modulo 437:\", find_square_root(340, 437))\n",
+    "print(\"(b). Square root of 253 modulo 3143:\", find_square_root(253, 3143)) #\n",
+    "print(\"(c). Square root of 2833 modulo 4189:\", find_square_root(2833, 4189))\n",
+    "print(\"(d). Square root of 813 modulo 868:\", find_square_root(813, 868))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2.25"
+   ]
   }
  ],
  "metadata": {
@@ -540,7 +608,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7 (tags/v3.9.7:1016ef3, Aug 30 2021, 20:19:38) [MSC v.1929 64 bit (AMD64)]"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4,
   "vscode": {
