--- a/chapter2_solution.ipynb
+++ b/chapter2_solution.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -589,6 +589,38 @@
    "metadata": {},
    "source": [
     "#### 2.25"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(a) Với $gcd(a,pq)=1$, ta có\n",
+    "\n",
+    "$x^2=a$ $(mod$ $n) \\rightarrow x^2=a_1$ $(mod$ $p)$ và $x^2=a_2$ $(mod$ $q)$ với $0 < a_1, a_2 < p$\n",
+    "\n",
+    "Do phương trình $x^2=a$ $(mod$ $n)$ có nghiệm nên 2 phương trình $x^2=a_1$ $(mod$ $p)$ và $x^2=a_2$ $(mod$ $q)$ cũng có nghiệm\n",
+    "\n",
+    "Ta có định lý nếu phương trình $x^2=t$ $(mod$ $p)$ (với $p$ là số nguyên tố) có nghiệm thì sẽ có 2 nghiệm $x$ $\\rightarrow x=\\pm \\sqrt{a_1}$ $(mod$ $p)$ và $x = \\pm \\sqrt{a_2}$ $(mod$ $q)$\n",
+    "\n",
+    "Với $x=\\pm \\sqrt{a_1}$ $(mod$ $p)$ ta có 2 cách chọn và $x = \\pm \\sqrt{a_2}$ $(mod$ $q)$ có 2 cách chọn, đồng thời khi ta lấy được phương trình theo modulo $p$ và $q$ thì ta có thể áp dụng định lý CRT để suy ra nghiệm $x$ theo modulo $n$ $\\rightarrow$ có 4 nghiệm\n",
+    "\n",
+    "(b) Ta có 1 thuật toán và máy để tìm được tất cả 4 nghiệm với một con $a$ nào đó. Giả sử ta sinh ra một giá trị $x_1$ và tính $a=x_1^2$. Ta sẽ dùng thuật toán trên để giải ra toàn bộ 4 nghiệm, trong đó 4 nghiệm lần lượt là $x_1, -x_1, x_2$ và $-x_2$\n",
+    "\n",
+    "Xét $x_2^2-x_1^2=(x_2-x_1)*(x_2+x_1)$ chia hết cho $pq$\n",
+    "- Nếu $x_2-x_1$ chia hết cho $pq$ hay $x_2+x_1$ chia hết cho $pq$ $\\rightarrow$ ta sẽ chọn giá trị $a$ khác\n",
+    "- Còn không thì $x_2-x_1=ap$ và $x_2+x_1=bq$ (hoặc ngược lại)\n",
+    "\n",
+    "Vậy $gcd(x_2-x_1, n)=gcd(x_2-x_1,n)=p$ và $gcd(x_2+x_1, n)=gcd(x_2+x_1,n)=q$"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2.28"
    ]
   }
  ],
