--- a/chapter2_solution.ipynb
+++ b/chapter2_solution.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 474,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 475,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 476,
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 477,
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 478,
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 479,
    "metadata": {},
    "outputs": [
     {
@@ -621,6 +621,71 @@
    "metadata": {},
    "source": [
     "#### 2.28"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 480,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(a). x = 47\n",
+      "(b). x = 223755\n",
+      "(c). x = 33703314\n",
+      "(d). x = 984414\n"
+     ]
+    }
+   ],
+   "source": [
+    "def pohlighellman(g, p, a):\n",
+    "    for N in range(1, p):\n",
+    "        if pow(g, N, p) == 1: break\n",
+    "    \n",
+    "    temp = N\n",
+    "    fi = 2\n",
+    "    res = [[]]\n",
+    "    input_crt = []\n",
+    "    factor = []\n",
+    "    while temp != 1:\n",
+    "        count = 0\n",
+    "        while temp % fi == 0:\n",
+    "            count += 1\n",
+    "            temp /= fi\n",
+    "        if count != 0: factor.append([fi, count])\n",
+    "        fi += 1\n",
+    "\n",
+    "    count = 0\n",
+    "    for f in factor:\n",
+    "        g_f = pow(g, N // pow(f[0], f[1]), p)\n",
+    "        h_f = pow(a, N // pow(f[0], f[1]), p)\n",
+    "        g_i = pow(g_f, pow(f[0], f[1] - 1), p)\n",
+    "        for i in range(f[1]):\n",
+    "            ex = 0\n",
+    "            for j in range(i): ex += res[count][j] * pow(f[0], j)\n",
+    "            h_i = pow(h_f * pow(g_f, -ex, p), pow(f[0], f[1] - i - 1), p)\n",
+    "            for x_i in range(f[0]):\n",
+    "                if pow(g_i, x_i, p) == h_i:\n",
+    "                    res[len(res) - 1].append(x_i)\n",
+    "                    break\n",
+    "        temp = 0\n",
+    "        c = 0\n",
+    "        for x in res[len(res) - 1]:\n",
+    "            temp += x * pow(f[0], c)\n",
+    "            c += 1\n",
+    "        input_crt.append([temp, pow(f[0], f[1])])\n",
+    "        count += 1\n",
+    "        res.append([])\n",
+    "    \n",
+    "    if len(input_crt) == 1: return input_crt[0][0]\n",
+    "    else: return chinese_remainder_theorem(input_crt)\n",
+    "\n",
+    "print(\"(a). x =\", pohlighellman(7, 433, 166))\n",
+    "print(\"(b). x =\", pohlighellman(10, 746497, 243278))\n",
+    "print(\"(c). x =\", pohlighellman(2, 41022299, 39183497))\n",
+    "print(\"(d). x =\", pohlighellman(17, 1291799, 192988))"
    ]
   }
  ],
