--- a/chapter3_solution.ipynb
+++ b/chapter3_solution.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 234,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 236,
    "metadata": {},
    "outputs": [
     {
@@ -179,19 +179,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 237,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(a). 1105 is composite. Witness = 747\n",
-      "(b) + (c). 294409 is composite. Witness = 40009\n",
-      "(d). 118901509 is probably prime. Witness = [15568147, 25999668, 4310146, 92830771, 99874199, 89176586, 11555867, 78143612, 22403635, 86496619]\n",
-      "(e). 118901521 is composite. Witness = 91965795\n",
-      "(f). 118901527 is probably prime. Witness = [92239254, 105969466, 97297599, 36857657, 84196182, 76646131, 110043670, 104556512, 68124085, 57376438]\n",
-      "(g). 118915387 is composite. Witness = 36154037\n"
+      "(a). 1105 is composite. Witness = 585\n",
+      "(b) + (c). 294409 is composite. Witness = 84089\n",
+      "(d). 118901509 is probably prime. Witness = [46355365, 6521299, 85020277, 5160687, 20239142, 2287223, 107596527, 108702212, 66764760, 97161073]\n",
+      "(e). 118901521 is composite. Witness = 71354266\n",
+      "(f). 118901527 is probably prime. Witness = [118625326, 42050795, 112918713, 43830761, 12621393, 52125791, 58999475, 11964255, 37702866, 18000641]\n",
+      "(g). 118915387 is composite. Witness = 59715755\n"
      ]
     }
    ],
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 238,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +316,7 @@
        "Text(0, 0.5, 'Ratio')"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 238,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 239,
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +398,7 @@
        "Text(0, 0.5, 'Ratio')"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 239,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -475,6 +475,39 @@
    "source": [
     "Số lượng số nguyên tố đồng dư $3$ mod $4$ và đồng dư $1$ mod $4$ là gần như tương đương nhau khi giá trị $n$ tiến ra vô cực"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 3.20"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(a) Áp dụng tích phân từng phần ta có\n",
+    "\n",
+    "$Li(X)=\\displaystyle \\int _{2}^{X }\\mathrm \\displaystyle\\frac{dt}{ln(t)}\\,=\\displaystyle \\int _{2}^{X }\\mathrm \\displaystyle\\frac{dt}{ln(t)}\\, \\bigg(u=\\displaystyle\\frac{1}{ln(t)}\\rightarrow du = \\displaystyle\\frac{-1}{t*ln(t)^2}, dv=dt\\rightarrow v=t\\bigg)=\\displaystyle\\frac{t}{ln(t)} \\bigg|^X_2+ \\displaystyle \\int _{2}^{X }\\mathrm \\displaystyle\\frac{dt}{ln(t)^2}=\\displaystyle\\frac{X}{ln(X)} + O(1) + \\displaystyle \\int _{2}^{X }\\mathrm \\displaystyle\\frac{dt}{ln(t)^2}$"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 3.23"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
