--- a/chapter3_solution.ipynb
+++ b/chapter3_solution.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -179,19 +179,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(a). 1105 is composite. Witness = 585\n",
-      "(b) + (c). 294409 is composite. Witness = 84089\n",
-      "(d). 118901509 is probably prime. Witness = [46355365, 6521299, 85020277, 5160687, 20239142, 2287223, 107596527, 108702212, 66764760, 97161073]\n",
-      "(e). 118901521 is composite. Witness = 71354266\n",
-      "(f). 118901527 is probably prime. Witness = [118625326, 42050795, 112918713, 43830761, 12621393, 52125791, 58999475, 11964255, 37702866, 18000641]\n",
-      "(g). 118915387 is composite. Witness = 59715755\n"
+      "(a). 1105 is composite. Witness = 751\n",
+      "(b) + (c). 294409 is composite. Witness = 253898\n",
+      "(d). 118901509 is probably prime. Witness = [8305167, 48043384, 113128623, 25005263, 34941588, 23100803, 48305139, 51460421, 56761627, 65882847]\n",
+      "(e). 118901521 is composite. Witness = 66798605\n",
+      "(f). 118901527 is probably prime. Witness = [103038399, 50956588, 13803583, 5512744, 61149367, 27125065, 108465741, 116259300, 84725875, 74490990]\n",
+      "(g). 118915387 is composite. Witness = 97123299\n"
      ]
     }
    ],
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +316,7 @@
        "Text(0, 0.5, 'Ratio')"
       ]
      },
-     "execution_count": 238,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +398,7 @@
        "Text(0, 0.5, 'Ratio')"
       ]
      },
-     "execution_count": 239,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -504,10 +504,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(a). n = 53357 = 233 * 229\n",
+      "(b). n = 34571 = 191 * 181\n",
+      "(c). n = 25777 = 173 * 149\n",
+      "(d). n = 64213 = 409 * 157\n"
+     ]
+    }
+   ],
+   "source": [
+    "def factor1(n):\n",
+    "    count = 1\n",
+    "    while True:\n",
+    "        temp = n + count * count\n",
+    "        if abs(int(math.sqrt(temp)) - math.sqrt(temp)) < 1e-7: return int(math.sqrt(temp)), count\n",
+    "        count += 1\n",
+    "\n",
+    "a, b = factor1(53357)\n",
+    "print(\"(a). n = 53357 =\", a + b, \"*\", abs(a - b))\n",
+    "\n",
+    "a, b = factor1(34571)\n",
+    "print(\"(b). n = 34571 =\", a + b, \"*\", abs(a - b))\n",
+    "\n",
+    "a, b = factor1(25777)\n",
+    "print(\"(c). n = 25777 =\", a + b, \"*\", abs(a - b))\n",
+    "\n",
+    "a, b = factor1(64213)\n",
+    "print(\"(d). n = 64213 =\", a + b, \"*\", abs(a - b))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 3.25"
+   ]
   }
  ],
  "metadata": {
